--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -90,6 +90,15 @@
              android:textSize="13sp"
              android:text="KERJAKAN"
              android:textColor="@color/white" />
+
+         <Button
+             android:id="@+id/btnSelesai"
+             android:layout_width="0dp"
+             android:layout_height="wrap_content"
+             android:layout_weight="1"
+             android:text="SELESAI"
+             android:textColor="@color/white"
+             android:visibility="gone" />
       </LinearLayout>
    </LinearLayout>
 </androidx.cardview.widget.CardView>
